# c0mpute

./: .env.example  .gitignore  .mise.toml  Cargo.toml  README.md  package.json  railpack.json
.github/workflows/: release.yml
apps/coordinator/: package.json
apps/tui/: package.json  tsconfig.json
apps/tui/src/: index.tsx
apps/web/: next.config.mjs  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/contact/: page.tsx
apps/web/src/app/docs/: page.tsx
apps/web/src/app/getting-started/: page.tsx
apps/web/src/app/plugins/: page.tsx
apps/web/src/app/plugins/[id]/install.sh/: route.ts
apps/web/src/app/privacy/: page.tsx
apps/web/src/app/terms/: page.tsx
apps/web/src/lib/: plugins.ts
dips/: 0000-template.md  0001-url-namespace.md  0002-cli-structure.md  0003-nostr-signed-request-auth.md  0004-toolchain-mise.md  0005-c0mpute-rebrand.md  0006-module-model.md  0007-coinpay-did-identity.md  0008-ui-strategy.md  0009-mojo-for-kernels.md  0010-bootstrap-seed-nodes.md  0011-no-central-backend.md  0012-no-storage-network.md  0012-storage-plugin.md  0013-byos-positioning.md  0014-status-aggregator.md  README.md
docs/: PRD.md  c0mpute-v1.md
node/crates/c0mpute-cli/src/: main.rs
node/crates/c0mpute-core/: Cargo.toml
node/crates/c0mpute-core/src/: buyer.rs  capabilities.rs  dispatch.rs  lib.rs  runner.rs  supervisor.rs
node/crates/c0mpute-core/tests/: auction_e2e.rs
node/crates/c0mpute-doctor/src/: lib.rs
node/crates/c0mpute-net/: Cargo.toml
node/crates/c0mpute-net/src/: bootstrap.rs  identity.rs  lib.rs  swarm.rs  topics.rs
node/crates/c0mpute-store/: Cargo.toml
node/crates/c0mpute-store/src/: erasure.rs  lib.rs  storage.rs
node/crates/quest-cli/: Cargo.toml
node/crates/quest-cli/src/: main.rs
node/crates/quest-core/src/: config.rs
plugins/coinpay/: install.sh  module.toml
plugins/coinpay/cli/: Cargo.toml
plugins/coinpay/cli/src/: main.rs
plugins/coinpay/web/: README.md
plugins/infernet/: install.sh  module.toml
plugins/infernet/cli/: Cargo.toml
plugins/infernet/cli/src/: main.rs
plugins/infernet/web/: README.md
plugins/transcode/: install.sh  module.toml
plugins/transcode/web/: README.md
scripts/: bump-version.sh  dev-setup.sh  install.sh
