[workspace]
resolver = "3"
members = [
    # ── Host (c0mpute umbrella binary + supporting crates) ─────────────
    # The host binary AND any in-process workload code lives here.
    # The `plugins/` directory holds only marketplace wrappers
    # (module.toml + web stubs); plugin source lives in upstream repos.
    "node/crates/quest-cli",          # produces `c0mpute`
    "node/crates/quest-core",
    "node/crates/quest-net",
    "node/crates/quest-store",
    "node/crates/quest-gateway",
    "node/crates/quest-verify",
    "node/crates/quest-update",
    "node/crates/quest-doctor",
    "node/crates/quest-proto",
    "node/crates/quest-api",
    "node/crates/quest-transcode",    # in-process transcode workload (FFmpeg)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/profullstack/c0mpute"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
blake3 = "1"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-br", "fs"] }
bytes = "1"
futures = "0.3"
async-trait = "0.1"
url = "2"
directories = "5"
sysinfo = "0.32"

# Host crates (node/crates)
quest-proto = { path = "node/crates/quest-proto" }
quest-store = { path = "node/crates/quest-store" }
quest-net = { path = "node/crates/quest-net" }
quest-gateway = { path = "node/crates/quest-gateway" }
quest-verify = { path = "node/crates/quest-verify" }
quest-update = { path = "node/crates/quest-update" }
quest-doctor = { path = "node/crates/quest-doctor" }
quest-api = { path = "node/crates/quest-api" }
quest-core = { path = "node/crates/quest-core" }

quest-transcode = { path = "node/crates/quest-transcode" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
