[package]
name = "coinpay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "coinpay — DID, wallet, escrow, payments, receipts, reputation."

[[bin]]
name = "coinpay"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
