[package]
name = "infernet-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "infernet — AI inference workload CLI for the c0mpute network."

[[bin]]
name = "infernet"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
